--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,38 @@
 spring.application.name=demo
+
+# Server Configuration
+server.port=8080
+server.servlet.context-path=/
+
+# Application Configuration
+app.name=Demo Application
+app.version=1.0.0
+app.description=A modern authentication system with Spring Boot and Spring Security
+
+# Logging Configuration
+logging.level.root=INFO
+logging.level.com.example.demo=DEBUG
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+logging.file.name=logs/app.log
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+
+# Security Configuration
+security.jwt.secret=your-secret-key-change-in-production
+security.jwt.expiration=3600000
+
+# Thymeleaf Configuration
+spring.thymeleaf.check-template-location=true
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.encoding=UTF-8
+
+# Session Configuration
+server.servlet.session.timeout=30m
+spring.session.store-type=none
+
+# Error Handling
+server.error.include-message=always
+server.error.include-binding-errors=always
+server.error.include-stacktrace=on_param
+server.error.include-exception=false
